minifying scripts/css

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,80 +1,1 @@
-/*
-main_styles.css
-For use @ Madanar.com and nowhere else
-Copyright Madanar 2024 - Written by Futuza
-*/
-
-	body
-	{
-		background-color:#0093fd;
-	}
-
-	.container-lg
-	{
-		background-color:#fff;
-	}
-
-	.container-md
-	{
-		background-color:#fff;
-	}
-	  
-	/*hyper links*/
-	a:link 
-	{
-		color: #569CD5;
-	}
-
-	a:visited 
-	{
-		color: inherit;
-	}
-
-	a:hover 
-	{
-		color:#0cc4e6;
-	}
-
-
-	/*link styling overrides for madblue badge buttons*/
-	.badge-madblue
-	{
-		display: inline-flex;
-		background: #0093fd;
-		color:#fff;
-	}
-
-	a:link#madblue
-	{
-		color:#fff;
-	}
-
-	a:visited#madblue
-	{
-		color:#fff;
-	}
-
-	a:hover#madblue
-	{
-		color:#390b55;
-	}
-
-	#copyright
-	{
-		background-color:#0093fd;
-		color:#fff;
-		display:block;
-		bottom: 0;
-		text-align: center;
-	}
-
-
-	footer
-	{
-		height: 30px;
-		padding-top:10px;
-	}
-
-
-
-
+body{background-color:#0093fd}.container-lg{background-color:#fff}.container-md{background-color:#fff}a:link{color:#569cd5}a:visited{color:inherit}a:hover{color:#0cc4e6}.badge-madblue{display:inline-flex;background:#0093fd;color:#fff}a:link#madblue{color:#fff}a:visited#madblue{color:#fff}a:hover#madblue{color:#390b55}#copyright{background-color:#0093fd;color:#fff;display:block;bottom:0;text-align:center}footer{height:30px;padding-top:10px}
